--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '22'  # Version majeure - reçoit les patches de sécurité
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
