--- a/package.json
+++ b/package.json
@@ -1,12 +1,41 @@
 {
-  "name": "logo-branding",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@digital-garden-nantes/logo-branding",
+  "version": "1.0.0",
+  "description": "Un module JavaScript qui ajoute une popup 'clic droit' sur votre logo pour faciliter le téléchargement des assets de marque (PNG/SVG), l'accès rapide aux guidelines et l'ouverture du lien dans un nouvel onglet.",
   "type": "module",
+  "main": "./dist/logo-branding.js",
+  "types": "./dist/logo-branding.d.ts",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "logo",
+    "branding",
+    "brand",
+    "assets",
+    "download",
+    "guidelines",
+    "popup",
+    "context-menu",
+    "svg",
+    "png",
+    "identity"
+  ],
+  "author": "Digital Garden Nantes",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Digital-Garden-Nantes/logo-branding.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Digital-Garden-Nantes/logo-branding/issues"
+  },
+  "homepage": "https://github.com/Digital-Garden-Nantes/logo-branding#readme",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "sass": "^1.93.2",
