--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digital-garden-nantes/logo-branding",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Un module JavaScript qui ajoute une popup 'clic droit' sur votre logo pour faciliter le téléchargement des assets de marque (PNG/SVG), l'accès rapide aux guidelines et l'ouverture du lien dans un nouvel onglet.",
   "type": "module",
   "main": "./dist/logo-branding.js",
@@ -41,5 +41,8 @@
     "sass": "^1.93.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.11"
+  },
+  "dependencies": {
+    "path": "^0.12.7"
   }
 }
